testdata/baselines/reference/compiler/simpleTestSingleFile.errors.txt
simpleTestSingleFile.tlua(1,7): error TS2322: Type 'string' is not assignable to type 'number'.


==== simpleTestSingleFile.tlua (1 errors) ====
    local x: number = "";
          ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.